0shares/files/k8s/yamls/option_lifecycle_postStart.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-with-poststart-hook 
spec:
  containers:
  - image: luksa/kubia
    name: kubia
    lifecycle:
      postStart:
        exec:
          command:
          - sh
          - -c
          - "echo 'hook will fail with exit code 15'; sleep 5; exit 15"
