0shares/files/k8s/yamls/option_securityContext_capabilities.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-add-settime-capability 
spec:
  containers: 
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      capabilities:
        add:
        - SYS_TIME
