0shares/files/k8s/yamls/option_securityContext_capabilities2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-drop-chown-capability 
spec:
  containers: 
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      capabilities:
        drop:
          - CHOWN
