0shares/files/k8s/yamls/option_securityContext_privileged.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-privileged 
spec:
  containers: 
    - name: main
      image: alpine
      command: ["/bin/sleep", "999999"]
      securityContext:
        privileged: true
