0shares/files/k8s/yamls/option_securityContext_runAsUser.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-as-user-guest 
spec:
  containers: 
  - name: main
    image: alpine
    command: ["/bin/sleep", "999999"]
    securityContext:
      runAsUser: 405
