0shares/files/k8s/yamls/Service_NodePort.yml
apiVersion: v1
kind: Service
metadata:
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30123   # 指定集群端口,如不指定默认为30000以下的随机端口
      protocol: TCP
    - name: https
      port: 443
      targetPort: 443
      nodePort: 30124
      protocol: TCP
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
