0shares/files/k8s/yamls/NetworkPolicy_default_deny.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy
metadata:
  name: default-deny 
spec:
  podSelector:
